--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
 </head>
 <body>
     <canvas class="webgl"></canvas>
+    <div id="blocker">
+
+        <div id="instructions">
+            <span style="font-size:40px">Y to play</span>
+            <br />
+            (W,A,S,D = Move, Y = Loock, MOUSE = Look, 9 = summon sphere, Q = exit, Other in development)
+        </div>
+
+    </div>
 </body>
 </html>
