fixing typo on the instruction

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="instructions">
             <span style="font-size:40px">Y to play</span>
             <br />
-            (W,A,S,D = Move, Y = Loock, MOUSE = Look, 9 = summon sphere, Q = exit, Other in development)
+            (W,A,S,D = Move, Y = Lock, MOUSE = Look, 9 = Summon Sphere, Q = Exit, Other in development)
         </div>
 
     </div>
